# Velune-CLI

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  BREAKING_CHANGES.md  CHANGELOG.md  CHANGELOG_v0.9.1.md  CI_FAILURE_ANALYSIS.md  CI_RECOVERY_REPORT.md  CI_ROOT_CAUSE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_SECURITY_REPORT.md  GITHUB_RELEASE_PREVIEW.md  LICENSE  LINT_REMEDIATION_REPORT.md  MANIFEST.in  MEMORY_STABILIZATION_REPORT.md  PACKAGING_AUDIT.md  PERFORMANCE_IMPROVEMENT_REPORT.md  POST_RELEASE_VERIFICATION.md  README.md  RELEASE_READINESS_AUDIT.md  REPOSITORY_COGNITION_FIX_PLAN.md  SECURITY.md  SECURITY_FIX_REPORT.md  SECURITY_REMEDIATION_REPORT.md  SECURITY_ROOT_CAUSE_ANALYSIS.md  SECURITY_STABILIZATION_REPORT.md  VELUNE_ARCHITECTURE_BIBLE.md  VELUNE_V1_0_1_RELEASE_REPORT.md  VERSION_BUMP_REPORT.md  WINDOWS.md  diff_e493941.txt  pyproject.toml  velune.toml
.githooks/: pre-push-secret-scan.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/readme/: README_ASSETS.md
docs/: ARCHITECTURE.md  ARCHITECTURE_STARTUP.md  ARCHITECTURE_STATUS.md  AUDIT_2026-07-07_V1_READINESS.md  CHANGELOG.md  CI_CD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MCP.md  PHASE3_INCREMENTAL_COGNITION.md  PHASE4_INTELLIGENT_RETRIEVAL.md  RELEASE.md  RELEASE_NOTES_v0.9.4.md  SECURITY.md  SLASH_COMMANDS.md  STARTUP_REFACTOR_MIGRATION.md  THREAT_MODEL.md  USAGE_GUIDE.md  cognitive-architecture.md  intelligence-foundation.md  mcp.md  releasing.md
ext/go/: go.mod
ext/rust/velune-native/: Cargo.toml  pyproject.toml
ext/rust/velune-native/src/: lib.rs
scripts/: benchmark_incremental_cognition.py  benchmark_native.py  benchmark_retrieval.py  benchmark_scan.py  check_architecture.py  check_startup_perf.py  extract_changelog.py  pre_release_check.py  security_audit.py  validate_week1.py  validate_week3.py  validate_week4.py
tests/: __init__.py  conftest.py  smoke_security_001.py  test_ask_failure_paths.py  test_asyncio_discipline.py  test_auto_detect_on_entry.py  test_autocomplete.py  test_banner.py  test_cancellation.py  test_ci_regression.py  test_clean_exit.py  test_cli.py  test_cli_ux.py  test_clipboard_osc52.py  test_cognition_manual.py  test_command_palette_favorites.py  test_command_palette_recency.py  test_commit_message.py  test_compaction_budget.py  test_config.py  test_config_extended.py  test_config_intelligence.py  test_connect_inline_integration.py  test_context_cache.py  test_council_runner.py  test_council_scheduler.py  test_council_tiers.py  test_council_view.py  test_councilmodel.py  test_crypto_passphrase_prompt.py  test_dashboard.py  test_diff_fragments.py  test_diff_preview.py  test_discovery_openai_compat.py  test_doctor_runtime_safety.py  test_episodic_session_unification.py  test_execute_background.py  test_execution_pipeline.py  test_filesystem_tools.py  test_fixed_content_width.py  (+121 more)
tests/cognition/: test_consensus.py  test_multisolver.py  test_sampling_profiles.py  test_scheduler.py
tests/integration/: conftest.py  test_cognitive_flow.py  test_event_bus_migration.py  test_llm_orchestration.py  test_mcp_server.py  test_memory_persistence.py  test_model_probing.py  test_ollama_integration.py  test_provider_api_contract.py  test_repository_indexer.py  test_sqlite_concurrency.py
tests/performance/: test_incremental_indexing.py
tests/security/: test_cognitive_firewall.py  test_command_spec.py  test_mcp_security.py  test_path_guard.py  test_plugin_sandbox.py  test_redaction.py  test_sandbox.py  test_security_hardening_2026_06.py  test_trust_boundary.py  test_workspace_isolation.py
tests/unit/: test_ast_parser.py  test_async_safety.py  test_base_tools.py  test_batch01.py  test_blast_radius.py  test_capability_aware_routing.py  test_checkpoints_concurrent.py  test_cli_chat.py  test_cli_json.py  test_cli_theme.py  test_cognitive_firewall.py  test_cognitive_reliability.py  test_command_spec.py  test_config_unification.py  test_context_assembler.py  test_context_budget.py  test_context_compaction.py  test_context_integration.py  test_context_sections.py  test_council_budget.py  test_council_orchestrator.py  test_doctor.py  test_doctor_table.py  test_dual_path_retrieval.py  test_frontier_cognition.py  test_git_tools.py  test_health_monitor.py  test_hybrid_fallback.py  test_keyword_bm25.py  test_lineage_continuity.py  test_markdown_stream.py  test_mcp.py  test_memory_lifecycle.py  test_memory_lifecycle_extended.py  test_memory_repair.py  test_orchestration_engine.py  test_orchestrator_refactor.py  test_personality_continuity.py  test_phase5_evolution.py  test_prompt_adaptation.py  (+13 more)
velune/: __init__.py  __main__.py  _compat.py  events.py  main.py
velune/analysis/: __init__.py  linter.py  refactor.py  symbol_search.py  type_inferrer.py
velune/cli/: __init__.py  app.py  autocomplete.py  banner.py  clipboard.py  command_palette.py  constants.py  context.py  councilmodel_ui.py  crash_reporter.py  design.py  dir_browser.py  fullscreen.py  guidance.py  home.py  inline_flow.py  interrupts.py  main.py  model_prefs.py  model_selector.py  model_switcher.py  modes.py  onboarding.py  picker.py  prompt_recall.py  provider_ui.py  pull_ui.py  registry.py  repl.py  session_manager.py  sessions.py  slash_commands.py  slash_dispatcher.py  statusbar.py  stream_renderer.py  theme.py  ui.py  ui_components.py  validators.py  workspaces.py
velune/cognition/: __init__.py  arbitrator.py  architecture.py  budget.py  consensus.py  council_example.py  council_orchestrator.py  council_runner.py  evolution.py  firewall.py  intent.py  module.py  orchestrator.py  personality.py  state.py  style_resolver.py  tradeoff.py  verification.py
velune/context/: __init__.py  assembler.py  budget.py  compressor.py  extractive.py  mentions.py  prompt_adaptation.py  scorer.py  sections.py  stitcher.py  token_counter.py  utilization.py  window.py
velune/core/: __init__.py  async_runtime.py  background.py  event_loop.py  (+10 more)
(+597 files in other folders)
