[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velune-cli"
dynamic = ["version"]
description = "Local-first multi-model AI developer CLI — council-based agents, persistent memory, repository cognition"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Surya HA", email = "suryahariharan2006@gmail.com" }
]
keywords = [
  "ai", "cli", "llm", "ollama", "local-ai",
  "coding-assistant", "multi-agent", "terminal",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Terminals",
  "Typing :: Typed",
]

# ── Lean core ────────────────────────────────────────────────────────────────
# The default install is intentionally small and pure-python-friendly so that
# `pip install velune-cli` resolves fast and cleanly on every platform. Heavy,
# compiled, or feature-specific dependencies live in the extras below and every
# import site for them is lazy + self-degrading, so the CLI starts and runs
# (Ollama / cloud chat, sessions, config, doctor) without any extra installed.
dependencies = [
    # Core CLI + config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.14.2",
    "toml>=0.10.2",
    # stdlib `tomllib` only exists on 3.11+; backport for 3.10.
    "tomli>=2.0.1; python_version < '3.11'",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "platformdirs>=4.2.0",
    "keyring>=24.0.0",
    "prompt-toolkit>=3.0.0",
    "pathspec>=0.12.0",

    # Providers (HTTP-only; no heavy/compiled deps)
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "mcp>=1.0.0",

    # Memory metadata store (stdlib-backed; vector store is the [rag] extra)
    "aiosqlite>=0.19.0",

    # Lexical retrieval + repo graph: kept in core so keyword search and the
    # dependency graph work out of the box. rank-bm25 requires numpy, so numpy
    # is a core dependency too (it is otherwise only used lazily by [rag]).
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "networkx>=3.2.0",

    # Execution + logging (small)
    "psutil>=5.9.0",
    "structlog>=24.0.0",

    # Utilities
    "orjson>=3.9.0",
    "tiktoken>=0.5.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
# ── Heavy / feature-specific extras ──────────────────────────────────────────
# RAG: semantic memory + vector retrieval. Pulls the large compiled wheels
# (lancedb/pyarrow/qdrant/numpy). Without it, semantic/vector features
# transparently degrade to no-ops; lexical (BM25) search still works.
rag = [
    "qdrant-client>=1.7.0",
    "lancedb>=0.5.0",
    "pyarrow>=14.0.0",
]
# Tree-sitter source parsing for deep repository cognition (compiled grammars).
# Without it, repository indexing falls back to lighter heuristics.
parsing = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-go>=0.21.0",
]
# OpenTelemetry exporters for external trace/metric backends. Velune's own
# trace log works without these; install only to ship spans to an OTLP collector.
telemetry = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
]
# Git provider tools (push / PR / issue) and repo git context. All git tools
# now use native subprocess commands, so this extra is empty and retained for compatibility.
git = []
# GGUF metadata reading only — safe, no diskcache dependency.
gguf = ["gguf>=0.6.0"]
# Docker sandbox isolation — install to enable execution.docker_sandbox = true.
docker = ["docker>=7.0.0"]
# NOTE: the former [llamacpp] extra (llama-cpp-python) has been permanently
# removed. llama-cpp-python transitively depends on diskcache<=5.6.3, which
# deserialises cache entries with pickle and allows arbitrary code execution
# when an attacker can write to the cache directory. No patched version of
# diskcache exists (Dependabot advisory, 2026-06). The adapter code in
# velune/providers/adapters/llamacpp.py is retained but its is_available()
# guard returns False when llama-cpp-python is not installed; it will not be
# re-enabled until a safe replacement for diskcache is available.
all = ["velune-cli[rag,parsing,telemetry,git,gguf,docker]"]
dev = [
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
    "pip-audit>=2.6.0",
    "bandit[toml]>=1.7.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
velune = "velune.main:main"

[project.urls]
Homepage = "https://github.com/Surya-Hariharan/Velune-CLI"
Repository = "https://github.com/Surya-Hariharan/Velune-CLI"
Documentation = "https://github.com/Surya-Hariharan/Velune-CLI/tree/main/docs"
Issues = "https://github.com/Surya-Hariharan/Velune-CLI/issues"
Changelog = "https://github.com/Surya-Hariharan/Velune-CLI/blob/main/docs/CHANGELOG.md"

[tool.hatch.version]
path = "velune/__init__.py"

[tool.hatch.build]
# Deterministic artifacts: Hatchling zeroes mtimes and sorts archive members.
# When SOURCE_DATE_EPOCH is exported in CI the timestamps are pinned to the
# commit date, so `python -m build` is byte-for-byte reproducible.
reproducible = true

[tool.hatch.build.targets.wheel]
packages = ["velune"]

[tool.hatch.build.targets.sdist]
include = [
  "velune/",
  "README.md",
  "LICENSE",
  "docs/CHANGELOG.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `auto` lets plain `async def test_*` run without per-test @pytest.mark.asyncio.
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: end-to-end tests that touch real subsystems (deselect with -m 'not integration')",
    "slow: long-running tests (deselect with -m 'not slow')",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "E402",    # Module level import not at top of file
    "E701",    # Multiple statements on one line
    "F403",    # Unable to detect undefined names from star imports
    "F405",    # Name may be undefined from star imports
    "N818",    # Exception name should be named with an Error suffix
    "B008",    # Function call in default argument
    "C901",    # Function is too complex
    "B024",    # ABC has no abstract methods
    "B904",    # raise ... from inside except clauses
]

[tool.ruff.lint.per-file-ignores]
# Example/template file — intentional dotted filename, not a real module
"velune/cognition/prompts/_premium.example.py" = ["N999"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "visit_ClassDef",
    "visit_Attribute",
    "visit_FunctionDef",
    "visit_Name",
    "visit_Import",
    "visit_ImportFrom",
    "visit_AsyncFunctionDef",
]

[tool.ruff.lint.isort]
known-first-party = ["velune"]
known-third-party = ["pydantic", "typer", "rich"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
include = ["velune"]
exclude = ["tests", "**/__pycache__"]
reportMissingImports = false
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedFunction = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalIterable = false
reportArgumentType = false
reportCallIssue = false
reportAttributeAccessIssue = false
reportAssignmentType = false
reportOperatorIssue = false
reportIncompatibleMethodOverride = false
reportPossiblyUnboundVariable = false

[tool.uv]
# Security: force patched floors for transitive deps flagged by Dependabot.
# msgpack <=1.2.0: GHSA-6v7p-g79w-8964 (out-of-bounds read / Unpacker reuse crash)
# diskcache: removed from the dependency tree (see [llamacpp] removal above).
#            diskcache has no patched version; the only safe fix is removal.
constraint-dependencies = ["msgpack>=1.2.1"]

[tool.bandit]
# Scan velune/ only; tests legitimately exercise unsafe patterns.
exclude_dirs = ["tests", ".venv", "build", "dist"]
# B404/B603/B607: subprocess usage is intentional and hardened in
# velune/execution/sandbox.py (shell=False, argv-only, env-scrubbed,
# process-tree kill). B101 assert: not used for security control flow.
skips = ["B101", "B404", "B603", "B607"]

