[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "velune-native"
version = "0.1.0"
description = "Native Rust extension for Velune CLI (SHA-256 hashing, fast directory scanning)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "velune_native"
